--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,107 +1,176 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>Great Idea!</title>
+    <title>Great Idea! - Services</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
+  <body>
+    <header>
+      <div class="navbar">
+        <div class="nav">
+          <nav>
+            <a href="services.html">Services</a>
+            <a href="services.html">Product</a>
+            <a href="services.html">Vision</a>
+            <a href="services.html">Features</a>
+            <a href="services.html">About</a>
+            <a href="services.html">Contact</a>
+          </nav>
+        </div>
+        <div class="logo">
+          <a href="index.html">
+            <img
+              class="logo"
+              src="img/logo.png"
+              alt="Great Idea! Company logo."
+            />
+          </a>
+        </div>
+      </div>
+    </header>
 
+    <section>
+      <div class="first-section">
+        <div class="intro-img">
+          <img
+            class="services-header-img"
+            src="img/services-header.jpg"
+            alt="Our services header image"
+          />
+        </div>
+        <div class="intro-text">
+          <h2>Services</h2>
+          <p>
+            Our services provide the best digital value in nulla suscipit
+            interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc
+            sit amet, iaculis tortor. Mauris consectetur feugiat justo quis
+            aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+            neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
+            facilisis iaculis.
+          </p>
+        </div>
+      </div>
+    </section>
 
-Services
-Product
-Vision
-Features
-About
-Contact
+    <section class="second-section">
+      <div class="card helper-1">
+        <h3>Digital Design</h3>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </div>
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      <div class="card helper-2">
+        <h3>UX / UI</h3>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </div>
 
+      <div class="card helper-1">
+        <h3>Digital Marketing</h3>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </div>
 
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+      <div class="card helper-2">
+        <h3>Learn More Web Development</h3>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </div>
 
-Services
+      <div class="card helper-1">
+        <h3>Learn More iOS Development</h3>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </div>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+      <div class="card helper-2">
+        <h3>Learn More Android Development</h3>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </div>
+    </section>
 
+    <hr />
 
-Digital Design
+    <section>
+      <div class="third-section">
+        <div class="details">
+          <h3>Some Facts About Our Services</h3>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <ul>
+            <li>Awesome things</li>
+            <li>Amazing things</li>
+            <li>Cool things</li>
+            <li>Great things</li>
+          </ul>
+        </div>
+        <div class="last-img">
+          <img
+            class="services-info-img"
+            src="img/services-info.png"
+            alt="one of our employees hard at work"
+          />
+        </div>
+      </div>
+    </section>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Digital Marketing
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
-
-</body>
-
+    <section>
+      <div class="copyright"><p>Copyright Great Idea! 2018</p></div>
+    </section>
+  </body>
 </html>
